--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Wrong link m8 :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>The requested page could not be found. Perhaps the link is different or I changed it.</p>
 </div>
