--- a/tenerife/book/print.html
+++ b/tenerife/book/print.html
@@ -215,6 +215,7 @@
 <ul>
 <li><a href="https://autoreisen.com/car-hire/car-hire.php">AutoReisen</a></li>
 <li><a href="https://www.cicar.com/EN">Cicar</a></li>
+<li><a href="https://www.pluscar-tenerife.com/booking.php?lang=en">PlusCar</a></li>
 </ul>
 <p>Jako další možnost je používat místní autobusy. Autobusy nemají až tak přísný řád, ale jezdí docela dost dobře. Pro ně je lepší si zařídit jejich kartičku <a href="https://tenmas.es/">TenMas</a>. Kartička se dá pořídit hned na letišti. Pak je většinou lepší si ji dát jako kreditní (<em>purse</em>) a nabýt si ji. Hlavní výhoda je, že pokud přestupujete, tak cena je o hodně levnější, protože se vlastně počítá celá cesta dohromady a ne dvě separátní cesty. Použití této karty je hodně jednoduché. Při vstupu si pípnete a <strong>PŘI VÝCHODU TAKY</strong> (na to se celkem často zapomíná, potom se bere jako cena až do konečné stanice). Pokud na kartu jede více lidí, tak je třeba předem říct řidiči kolik vás je a kam jedete. Následně pro hledání spojů se dá vyhledat přes <em>google maps</em> anebo použít jejich aplikaci <a href="https://play.google.com/store/apps/details?id=com.diodev.guaguas&amp;gl=US">Guaguas</a> (<em>už není moc funkční</em>) ale nehledal jsem jestli existuje i verze na iOS.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="trasy-a-místa"><a class="header" href="#trasy-a-místa">Trasy a místa</a></h1>
