--- a/tenerife/book/print.html
+++ b/tenerife/book/print.html
@@ -185,7 +185,7 @@
 <p>Koneckonců přesný seznam závisí na potřebách každého z Vás. Nicméně i tak dodám nějaké doporučení, které mi přijde užitečné.</p>
 <p>Pokud si budete brát velký kufr, tak tohle není moc potřeba, ale právě, že většinou stačí jen příruční zavazadlo. Ty jsou většinou rozměrů batohu, do kterého se vejde dost potřebných věcí.</p>
 <p>Díky dobrému počasí toho člověk zas tak moc nepotřebuje. Jako boty stačí jen nějaké <strong>botasky</strong> na normální chození a pak se hodí nějaké <strong>pořádnější boty</strong> do hor. Do hor se taky málokdy hodí i teplejší oblečení, ale většinou to nebývá třeba (je třeba dodat, že moc na ostrově zima nebývá). Proto pokud letíte někdy v zimních termínech, tak se do letadla oblečte v dlouhém oblečení a jděte v pořádnějších botách a díky tomu věci, které zabírají nejvíce místa nemusíte mít v batohu.</p>
-<p>Pak nějaké základní věci jako ručníky bývávají na ubytování (ale záleží dle jste ubytováni). Pak už snad jen plavky a normální oblečení do tepla. Popřípadě se vše dá dokoupit v místních obchodech, které poslední dobou bývají snad i levnější než v Česku.</p>
+<p>Pak nějaké základní věci jako ručníky bývávají na ubytování (ale záleží kde jste ubytováni). Pak už snad jen plavky a normální oblečení do tepla. Popřípadě se vše dá dokoupit v místních obchodech, které poslední dobou bývají snad i levnější než v Česku.</p>
 <p>Detaily psát nechci, jednak bych na něco určitě zapomněl a taky každý chce s sebou něco jiného, takže mi to nedává smysl.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="cesta-letadlem"><a class="header" href="#cesta-letadlem">Cesta letadlem</a></h1>
 <p>Přijde mi, že ne všichni mají nějaké nedávné zkušenosti s létáním. Pokud ale jo, tak tohle číst nemusíte.</p>
@@ -244,10 +244,10 @@
 <li>Ještě je zajímavé jiné Where I Go také poblíž a to <a href="https://www.geocaching.com/geocache/GC8J7A3">reverzní keš</a>.</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="příroda"><a class="header" href="#příroda">Příroda</a></h2>
-<p>Na celém ostrově je spoustu zajímavých přírodních úkazů. Při výběru berte v potaz to, jestli se bojíte výšek (nebo dokonce máte závratě). Většinu tras jsem osobně zvládl, ale každý má jiné hranice.</p>
+<p>Na celém ostrově je spoustu zajímavých přírodních úkazů. Při výběru berte v potaz to, jestli se bojíte výšek (nebo dokonce máte závratě). Většinu tras jsem osobně zvládl, ale každý má jiné hranice.\</p>
 <h3 id="parque-national-del-teide"><a class="header" href="#parque-national-del-teide">Parque National del Teide</a></h3>
 <p>Samozřejmostí je středobod Tenerife <a href="https://goo.gl/maps/qYmkyHaMSfNSbAkY7">Pico del Teide</a>. Pokud by se někdo chtěl dostat až na vrchol, tak je třeba si zajistit včas <a href="https://www.reservasparquesnacionales.es/real/ParquesNac/usu/html/listado-actividades-oapn.aspx?cen=2">permit</a>. A i tak to není zaručené kvůli počasí, protože nahoře můžou být klidně i závěje sněhu. Na samotný vrchol jezdí lanovka, ale lze zvolit i cestu po svých.</p>
-<p>Dalším místem je <a href="https://goo.gl/maps/QTHVNU92jzp3gDeBA">Roques de Garcia</a>, což jsou skály uprostřed &quot;pouště&quot;. Je tady jeden kratší <a href="../../resources/garcia.gpx" title="resources/garcia.gpx">okruh</a>, který se dá jít, ale výrazně doporučuji jít daným směrem, kvůli výškovému profilu.</p>
+<p>Dalším místem je <a href="https://goo.gl/maps/QTHVNU92jzp3gDeBA">Roques de Garcia</a>, což jsou skály uprostřed "pouště". Je tady jeden kratší <a href="../../resources/garcia.gpx" title="resources/garcia.gpx">okruh</a>, který se dá jít, ale výrazně doporučuji jít daným směrem, kvůli výškovému profilu.</p>
 <h3 id="anaga"><a class="header" href="#anaga">Anaga</a></h3>
 <p>Celý sever je také hodně hornatý. Pohoří se jmenuje <a href="https://goo.gl/maps/Y49XMutjRv124ZSr7">Anaga</a>. Tady se dají najít zajímavé trasy. Ale cesta autem už je dost záživnější (jak když polechtáš hada #snake). A trasy už jsou také intenzivnější, ale s pěknými výhledy.</p>
 <h3 id="teno"><a class="header" href="#teno">Teno</a></h3>
@@ -255,13 +255,13 @@
 <p>Součástí pohoří Teno jsou skály vysoce se tyčící přímo z oceánu  <a href="https://goo.gl/maps/oQFcwSWWEjWE9V1k6">Los Gigantes</a>. Pak zase záleží jak blízko chce člověk jít, protože se dá jít <a href="../../resources/gigantes.gpx" title="resources/gigantes.gpx">trasa</a> po Los Gigantes.</p>
 <h3 id="další"><a class="header" href="#další">Další</a></h3>
 <p>Další v pořadí je <a href="https://www.barrancodelinfierno.es/en/">Barranco del Infierno</a>. Jedná se o celkem pěkné údolí akorát kvůli ne zas tak dávné nehodě se vstup hodně hlídá a člověk je nucen koupit si vstup a jít tam z helmou. Řekl bych, že to není zas tak zajímavé. Ale přišlo mi blbé to aspoň neříct.</p>
-<p>Co mě ještě napadlo jsou skály známé jako <a href="https://goo.gl/maps/FZuzgERWUWpBjWQT7">Paisaje Lunar</a>(&quot;měsíční krajina&quot;). Buď lze zastavit ve Vilafloru a jít celou trasu pěšky anebo se jde i více přiblížit autem, ale pokud dobře vím, tak tam není moc dobrá cesta vzhledem k povrchu.</p>
+<p>Co mě ještě napadlo jsou skály známé jako <a href="https://goo.gl/maps/FZuzgERWUWpBjWQT7">Paisaje Lunar</a>("měsíční krajina"). Buď lze zastavit ve Vilafloru a jít celou trasu pěšky anebo se jde i více přiblížit autem, ale pokud dobře vím, tak tam není moc dobrá cesta vzhledem k povrchu.</p>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="města"><a class="header" href="#města">Města</a></h2>
 <p>Možná pokud by někdo chtěl navštívit spíše kulturu, tak pak zajímavá města by mohla být.</p>
 <h3 id="garachico"><a class="header" href="#garachico">Garachico</a></h3>
 <p>Městečko <a href="https://goo.gl/maps/mHCb6RYfBmf5BGFE7">Garachico</a> které kdysi bylo zalité lávou. Také zde jezdíme na <a href="https://goo.gl/maps/Xfbu3stRrEJknuax7">jídlo</a> (králík naložený v místní omáčce) a pak tu jsou přírodní bazénky, ale tam se mockrát nedá plavat, protože to tam je spíše jako v pračce. Pokud si náhodou někdy pamatuje, jak bývalo ve zprávách, že na Tenerife se kvůli bouři ničí baráky z přívalových vln, tak to bylo v těchto oblastech.</p>
 <h3 id="candelarioa"><a class="header" href="#candelarioa">Candelarioa</a></h3>
-<p>Další město je <a href="https://goo.gl/maps/6e3SA1BZ9FwFJ6JN6">Candelaria</a>. Tady je to hlavně známé svojí katedrálou (nebo co to je) a pokud si to správně pamatuji tak v ní je &quot;černá Madonna&quot;.</p>
+<p>Další město je <a href="https://goo.gl/maps/6e3SA1BZ9FwFJ6JN6">Candelaria</a>. Tady je to hlavně známé svojí katedrálou (nebo co to je) a pokud si to správně pamatuji tak v ní je "černá Madonna".</p>
 <h3 id="la-orotava"><a class="header" href="#la-orotava">La Orotava</a></h3>
 <p>Dále bych řekl <a href="https://goo.gl/maps/T3zynzWUvovTTgLBA">La Orotava</a>, které je také dost pěkné a to svými parky.</p>
 <h3 id="la-laguna"><a class="header" href="#la-laguna">La Laguna</a></h3>
@@ -273,7 +273,7 @@
 <p>Samozřejmě nesmí ani chybět pár známých pláží.</p>
 <h3 id="severní-pobřeží"><a class="header" href="#severní-pobřeží">Severní pobřeží</a></h3>
 <p>Na severnějším pobřežím pláže spíš bývají kamenité a také více divoké, za to nabízejí pěkné pohledy.</p>
-<p>Nebo také se zde občas vyskytují &quot;přírodní&quot; bazénky např. <a href="https://goo.gl/maps/SQPZC5LWMhPEGWzk9">Bajamar</a> anebo v jak jsem říkal i v Garachicu.</p>
+<p>Nebo také se zde občas vyskytují "přírodní" bazénky např. <a href="https://goo.gl/maps/SQPZC5LWMhPEGWzk9">Bajamar</a> anebo v jak jsem říkal i v Garachicu.</p>
 <h3 id="jižní-pobřeží"><a class="header" href="#jižní-pobřeží">Jižní pobřeží</a></h3>
 <p>Pláže nacházející se na jižním pobřeží bývají spíše písečné a jsou spíše zaměřené pro turisty.</p>
 <p>Za hlavním městem je <a href="https://goo.gl/maps/UnD8CAmhuvKnnt7u9">Playa de las Teresitas</a> která je asi největší pláž, nicméně je uměle vytvořená z písku ze Sahary.</p>
@@ -284,12 +284,12 @@
 <div style="break-before: page; page-break-before: always;"></div><h2 id="vedlejší"><a class="header" href="#vedlejší">Vedlejší</a></h2>
 <p>Jednou z nejznámější atrakcí je <a href="https://www.loroparque.com/index.php/en/">Loro Parque</a>, což je jednoduše řečeno velká zoo. Aby se to pořádně vyplatilo a člověk viděl vše, tak je to zhruba na celý den. Protože zde jsou naplánované všemožné show.</p>
 <p>Podobný jako Loro Parque je <a href="https://www.siampark.net/index.php/en/">Siam Park</a> akorát tady se jedná o akvapark. Rozhodně se vyplatí jít během nějakého dne kdy není svátek nebo volno aby tam nebylo úplně narváno.</p>
-<p>Pokud chcete klidně strávený den, tak jako možnost doporučuji si vyjet směrem k Teide a pak cestou se nachází u cesty &quot;kempy&quot; ve kterých je spousta volně dostupných &quot;grilů&quot;. Člověk si musí přinést něco co dobře hoří a jídlo a cokoliv co chce. Pokud si správně pamatuji tak je tam přístup k vodě a také je tam toaleta. Jenom přidám jeden <a href="https://goo.gl/maps/VyYMBCxJ1tVeZEQLA">příklad</a> ale je jich tam více a na vícero cestách.</p>
+<p>Pokud chcete klidně strávený den, tak jako možnost doporučuji si vyjet směrem k Teide a pak cestou se nachází u cesty "kempy" ve kterých je spousta volně dostupných "grilů". Člověk si musí přinést něco co dobře hoří a jídlo a cokoliv co chce. Pokud si správně pamatuji tak je tam přístup k vodě a také je tam toaleta. Jenom přidám jeden <a href="https://goo.gl/maps/VyYMBCxJ1tVeZEQLA">příklad</a> ale je jich tam více a na vícero cestách.</p>
 <p><em>Nejspíše jsem toho spoustu vynechal, ale to už je na vás, abyste to našli sami.</em></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="počasí"><a class="header" href="#počasí">Počasí</a></h1>
 <p>Tady není moc co dodat. Během celého roku se teplota pohybuje kolem 25 stupňů. Samozřejmě není vždy zcela konstatní. Občas můžete narazit na studené noci s 16 stupni anebo zažít 40ti stupňové dny.</p>
 <p>Je dobré dodat, že tohle se týká jižní části ostrova. Kvůli tomu jak uprostřed ostrova je Teide, tak vzniká to, že na severu častěji prší a také zde bývá trochu nižší teplota, ale ne s nějakým velkým rozdílem. Respektive dobrá rada je, že pokud na jedné části ostrova prší, tak na druhé nejspíše ne.</p>
-<p>Ještě bych řekl, že občas nastane něco čemu místní říkají <strong>&quot;Calima&quot;</strong> a to je pro písek, který je kvůli bouři vynesen ze Sahary a dále putuje nejenom na Kanárské ostrovy. Pokud to nastane, tak je poznat, že ve vzduchu je písek a taky se zvýší teplota. Proto se moc nedoporučuje dělat fyzicky náročné aktivity. Jednak protože je hodně horko, ale taky člověk vdechuje písek.</p>
+<p>Ještě bych řekl, že občas nastane něco čemu místní říkají <strong>"Calima"</strong> a to je pro písek, který je kvůli bouři vynesen ze Sahary a dále putuje nejenom na Kanárské ostrovy. Pokud to nastane, tak je poznat, že ve vzduchu je písek a taky se zvýší teplota. Proto se moc nedoporučuje dělat fyzicky náročné aktivity. Jednak protože je hodně horko, ale taky člověk vdechuje písek.</p>
 <p>Jako poslední (spíše taková zajímavost) je, že na Teide (popř. i v národním parku okolo Teide někdy může nasněžit. To ale není moc časté. Nicméně pokud se pojedé do národního parku podívat, tak u cest uvidíte dvojbarevné tyče, které slouží k použití pluhu.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="okolí-costa-del-silencio"><a class="header" href="#okolí-costa-del-silencio">Okolí Costa del Silencio</a></h1>
 <p>Tady sepíšu to co je v okolí Costa del Silencio a Las Galletas, která se pár čtenářům může hodit.</p>
@@ -306,7 +306,7 @@
 <li>Podstatný další místo je <a href="https://goo.gl/maps/TH3TqrZP95npKrZW7">rybí market</a>, kde skoro každý ráno mají čerstvé ryby.</li>
 <li>Také v centru Las Galletas je místní obchod s ovocem a zeleninou, kde mají místní věci. Přesnou ulici si nepamatuji, ale aspoň si člověk může projít ne tak velké centrum.</li>
 <li>Kdo by chtěl spíše obchod, který zná tak i v dojezdové vzdálenosti je <a href="https://goo.gl/maps/ZwaZ35cjsRfCVap1A">Lidl</a>.</li>
-<li>Pak ještě na odlet většinou aerolinky vyžadují mít vytištěné letenky. Sice to většinou není zcela třeba, ale jsou zde místa podobné &quot;internetovým kavárnám&quot; kde mají i tiskárny. Jedna je poblíž <a href="https://goo.gl/maps/HvZCsYA1RXkQ9Twm9">tohoto místa</a> a jiná je taky v centrum Las Galletas. (Ani já už si nepamatuji v jaké ulici to přímo je.</li>
+<li>Pak ještě na odlet většinou aerolinky vyžadují mít vytištěné letenky. Sice to většinou není zcela třeba, ale jsou zde místa podobné "internetovým kavárnám" kde mají i tiskárny. Jedna je poblíž <a href="https://goo.gl/maps/HvZCsYA1RXkQ9Twm9">tohoto místa</a> a jiná je taky v centrum Las Galletas. (Ani já už si nepamatuji v jaké ulici to přímo je.</li>
 </ul>
 
                     </main>
@@ -326,6 +326,22 @@
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script>
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
 
 
 
