--- a/tenerife/book/extra.html
+++ b/tenerife/book/extra.html
@@ -176,7 +176,7 @@
                         <h2 id="vedlejší"><a class="header" href="#vedlejší">Vedlejší</a></h2>
 <p>Jednou z nejznámější atrakcí je <a href="https://www.loroparque.com/index.php/en/">Loro Parque</a>, což je jednoduše řečeno velká zoo. Aby se to pořádně vyplatilo a člověk viděl vše, tak je to zhruba na celý den. Protože zde jsou naplánované všemožné show.</p>
 <p>Podobný jako Loro Parque je <a href="https://www.siampark.net/index.php/en/">Siam Park</a> akorát tady se jedná o akvapark. Rozhodně se vyplatí jít během nějakého dne kdy není svátek nebo volno aby tam nebylo úplně narváno.</p>
-<p>Pokud chcete klidně strávený den, tak jako možnost doporučuji si vyjet směrem k Teide a pak cestou se nachází u cesty &quot;kempy&quot; ve kterých je spousta volně dostupných &quot;grilů&quot;. Člověk si musí přinést něco co dobře hoří a jídlo a cokoliv co chce. Pokud si správně pamatuji tak je tam přístup k vodě a také je tam toaleta. Jenom přidám jeden <a href="https://goo.gl/maps/VyYMBCxJ1tVeZEQLA">příklad</a> ale je jich tam více a na vícero cestách.</p>
+<p>Pokud chcete klidně strávený den, tak jako možnost doporučuji si vyjet směrem k Teide a pak cestou se nachází u cesty "kempy" ve kterých je spousta volně dostupných "grilů". Člověk si musí přinést něco co dobře hoří a jídlo a cokoliv co chce. Pokud si správně pamatuji tak je tam přístup k vodě a také je tam toaleta. Jenom přidám jeden <a href="https://goo.gl/maps/VyYMBCxJ1tVeZEQLA">příklad</a> ale je jich tam více a na vícero cestách.</p>
 <p><em>Nejspíše jsem toho spoustu vynechal, ale to už je na vás, abyste to našli sami.</em></p>
 
                     </main>
@@ -208,6 +208,22 @@
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script>
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
 
 
 
