--- a/print.html
+++ b/print.html
@@ -31,6 +31,8 @@
 
         <!-- Custom theme stylesheets -->
 
+        <!-- MathJax -->
+        <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body class="sidebar-visible no-js">
     <div id="body-container">
@@ -418,8 +420,8 @@ done
 <li><a href="./mff/connected-cuts.pdf">My notes on connected cuts</a></li>
 <li><a href="https://dl.acm.org/doi/pdf/10.1145/195058.195216">Max cut</a></li>
 <li><a href="https://epubs.siam.org/doi/abs/10.1137/120873996">Min max and small set expansion</a></li>
-<li><a href="https://www.researchgate.net/publication/2513735_Multicommodity_Flows_and_Approximation_Algorithms">$s-t$ connected cuts</a></li>
-<li><a href="https://arxiv.org/abs/1807.07143v2">$k$ cuts</a> a <a href="https://arxiv.org/pdf/1807.07143v2">PDF</a></li>
+<li><a href="https://www.researchgate.net/publication/2513735_Multicommodity_Flows_and_Approximation_Algorithms">\(s-t\) connected cuts</a></li>
+<li><a href="https://arxiv.org/abs/1807.07143v2">\(k\) cuts</a> a <a href="https://arxiv.org/pdf/1807.07143v2">PDF</a></li>
 <li><a href="https://kam.mff.cuni.cz/~kolman/papers/STC-2024.pdf">Petr Kolman STC</a></li>
 <li><a href="https://kam.mff.cuni.cz/~kolman/papers/stc-ext-arx.pdf">Petr Kolman - other aproximation</a></li>
 </ul>
@@ -6359,7 +6361,9 @@ fn main() {
 
         <script>
         window.addEventListener('load', function() {
-            window.setTimeout(window.print, 100);
+            MathJax.Hub.Register.StartupHook('End', function() {
+                window.setTimeout(window.print, 100);
+            });
         });
         </script>
 
