deploy: 80cd77e41e52c9e4a1c0d6b21767ae4d1d5b364e

--- a/mff.html
+++ b/mff.html
@@ -385,6 +385,8 @@ done
 <li><a href="https://arxiv.org/abs/1807.07143v2">\(k\) cuts</a> a <a href="https://arxiv.org/pdf/1807.07143v2">PDF</a></li>
 <li><a href="https://kam.mff.cuni.cz/~kolman/papers/STC-2024.pdf">Petr Kolman STC</a></li>
 <li><a href="https://kam.mff.cuni.cz/~kolman/papers/stc-ext-arx.pdf">Petr Kolman - other aproximation</a></li>
+<li><a href="https://sites.cs.ucsb.edu/~daniello/papers/maximum_minimal_cut__Journal.pdf">Maximum connected cut</a></li>
+<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-61115-6_14">Discrete mathematics</a></li>
 </ul>
 
                     </main>
