--- a/mff.html
+++ b/mff.html
@@ -379,6 +379,7 @@ done
 <h2 id="thesis-links"><a class="header" href="#thesis-links">Thesis links</a></h2>
 <ul>
 <li><a href="./mff/connected-cuts.pdf">My notes on connected cuts</a></li>
+<li><a href="./mff/absorptive-flow.pdf">My notes on absorptive flow</a></li>
 <li><a href="https://dl.acm.org/doi/pdf/10.1145/195058.195216">Max cut</a></li>
 <li><a href="https://epubs.siam.org/doi/abs/10.1137/120873996">Min max and small set expansion</a></li>
 <li><a href="https://www.researchgate.net/publication/2513735_Multicommodity_Flows_and_Approximation_Algorithms">\(s-t\) connected cuts</a></li>
