deploy: b386fcf5b35679ead4f5200238b5df210ec239d6

--- a/mff.html
+++ b/mff.html
@@ -193,6 +193,9 @@
 <tr><td style="text-align: center">Constraint programming</td><td style="text-align: center"><a href="https://ktiml.mff.cuni.cz/~bartak/podminky/">Web</a> <a href="https://jbulin.github.io/teaching/fall/nopt042/">Cvičení</a></td></tr>
 <tr><td style="text-align: center">Introduction to Parameterized Algorithms</td><td style="text-align: center"><a href="https://research.koutecky.name/db/teaching:intro_par_alg2324">Web</a> <a href="https://www.mimuw.edu.pl/~malcin/book/parameterized-algorithms.pdf">Kniha</a> <a href="https://iuuk.mff.cuni.cz/~tung/teaching/fpt-ws2324/">Cvičení</a></td></tr>
 <tr><td style="text-align: center">Programování v jazyce Rust</td><td style="text-align: center"><a href="https://d3s.mff.cuni.cz/teaching/nprg082/">Web</a></td></tr>
+<tr><td style="text-align: center">Vybrané kapitoly z kombinatoriky 1</td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">Základy teorie kategorií</td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">úvod do teorie čísel</td><td style="text-align: center"><a href="https://kam.mff.cuni.cz/~klazar/UTC24.html">Web</a></td></tr>
 <tr><td style="text-align: center"><strong>2324 - Letní semestr</strong></td><td style="text-align: center"><strong>--</strong></td></tr>
 <tr><td style="text-align: center">Teorie Matroidů</td><td style="text-align: center"><a href="https://iuuk.mff.cuni.cz/~pangrac/vyuka/">Web</a> <a href="https://kam.mff.cuni.cz/~cerny/teach/23-24/matroids.html">Cviceni</a></td></tr>
 <tr><td style="text-align: center">Datove struktury 2</td><td style="text-align: center"><a href="https://mj.ucw.cz/vyuka/2324/ds2/">Web</a> <a href="https://mj.ucw.cz/vyuka/dsnotes/ds.pdf">Skripta</a></td></tr>
