--- a/mff.html
+++ b/mff.html
@@ -231,14 +231,18 @@
 <h2 id="thesis-links"><a class="header" href="#thesis-links">Thesis links</a></h2>
 <ul>
 <li><a href="./mff/connected-cuts.pdf">My notes on connected cuts</a></li>
-<li><a href="https://dl.acm.org/doi/pdf/10.1145/195058.195216">Max cut</a></li>
+<li><a href="https://link.springer.com/article/10.1007/s10107-023-01987-9">On the minimum \(s-t\) cut problem with budget constraints</a></li>
 <li><a href="https://epubs.siam.org/doi/abs/10.1137/120873996">Min max and small set expansion</a></li>
+<li><a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ESA.2021.26">Balanced Crown Decomposition for Connectivity Constraints</a></li>
+</ul>
+<h3 id="other-links"><a class="header" href="#other-links">Other links</a></h3>
+<ul>
+<li><a href="https://dl.acm.org/doi/pdf/10.1145/195058.195216">Max cut</a></li>
 <li><a href="https://www.researchgate.net/publication/2513735_Multicommodity_Flows_and_Approximation_Algorithms">\(s-t\) connected cuts</a></li>
 <li><a href="https://arxiv.org/abs/1807.07143v2">\(k\) cuts</a> a <a href="https://arxiv.org/pdf/1807.07143v2">PDF</a></li>
 <li><a href="https://kam.mff.cuni.cz/~kolman/papers/STC-2024.pdf">Petr Kolman STC</a></li>
 <li><a href="https://kam.mff.cuni.cz/~kolman/papers/stc-ext-arx.pdf">Petr Kolman - other aproximation</a></li>
 <li><a href="https://sites.cs.ucsb.edu/~daniello/papers/maximum_minimal_cut__Journal.pdf">Maximum connected cut</a></li>
-<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-61115-6_14">Discrete mathematics</a></li>
 </ul>
 
                     </main>
