--- a/print.html
+++ b/print.html
@@ -225,7 +225,7 @@
 <li><a href="./mff/past-ii.pdf">Probability and statistics 2</a></li>
 <li><a href="./mff/polyhedra.pdf">Polyhedral combinatorics</a></li>
 <li><a href="./mff/temno.pdf">Teorie množin</a></li>
-<li><a href="./mff/vybrane-kapitoly-kg.pdf">Vybrané kapitoly z kombinatoriky</a></li>
+<li><a href="./mff/vybrane-kapitoly-kg.pdf">Vybrané kapitoly z kombinatoriky (not finished yet)</a></li>
 </ul>
 <h2 id="odkazy-na-předměty"><a class="header" href="#odkazy-na-předměty">Odkazy na předměty</a></h2>
 <div class="table-wrapper"><table><thead><tr><th style="text-align: center">Předmět</th><th style="text-align: center">Odkazy</th></tr></thead><tbody>
