deploy: 597d8df68bb3330c0285cfabd8c3de518af3d881

--- a/print.html
+++ b/print.html
@@ -820,6 +820,7 @@ alias rustinstall="curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | s
 </ul>
 </li>
 </ul>
+<p>Obecně je dobré se opírat o již plně fungující instituce, jako je třeba <a href="https://www.avcr.cz/cs/">Akademie věd</a>.</p>
 <p>Dále také doporučuji si poslechnout <a href="https://www.kanarci.online/">Kanárky v síti</a>.</p>
 <p>Dodatečně se zatím jen podporuje a vytváří <a href="https://www.donio.cz/neskakej-jim-na-spek">nový projekt</a>.</p>
 <h1 id="satira-sarkasmus-a-ironie"><a class="header" href="#satira-sarkasmus-a-ironie">Satira, sarkasmus a ironie</a></h1>
