--- a/dezinfo.html
+++ b/dezinfo.html
@@ -187,6 +187,7 @@
 </ul>
 </li>
 </ul>
+<p>Obecně je dobré se opírat o již plně fungující instituce, jako je třeba <a href="https://www.avcr.cz/cs/">Akademie věd</a>.</p>
 <p>Dále také doporučuji si poslechnout <a href="https://www.kanarci.online/">Kanárky v síti</a>.</p>
 <p>Dodatečně se zatím jen podporuje a vytváří <a href="https://www.donio.cz/neskakej-jim-na-spek">nový projekt</a>.</p>
 <h1 id="satira-sarkasmus-a-ironie"><a class="header" href="#satira-sarkasmus-a-ironie">Satira, sarkasmus a ironie</a></h1>
