deploy: 9a3f957cc5e357616e5148d2e8d1f8005179f1fe

--- a/print.html
+++ b/print.html
@@ -826,6 +826,7 @@ alias rustinstall="curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | s
 <h1 id="satira-sarkasmus-a-ironie"><a class="header" href="#satira-sarkasmus-a-ironie">Satira, sarkasmus a ironie</a></h1>
 <p>Pokudněkoho baví používá sarkasmus a satiru, tak si můžete přečíst paper na <a href="./resources/fialova.pdf">fialovou</a> barvu.</p>
 <p>Popřípadě doporučuji <a href="https://paralelnilisty.cz/">paralelní listy</a>.</p>
+<p>Nebo oproti standardní <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedii</a> se můžete podívat na informace z <a href="https://necyklopedie.org/">Necyklopedie</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="movies"><a class="header" href="#movies">Movies</a></h1>
 <p>There is a list of movies or series.</p>
 <div class="table-wrapper"><table><thead><tr><th style="text-align: center">Name</th><th style="text-align: center">Links</th></tr></thead><tbody>
