--- a/dezinfo.html
+++ b/dezinfo.html
@@ -193,6 +193,7 @@
 <h1 id="satira-sarkasmus-a-ironie"><a class="header" href="#satira-sarkasmus-a-ironie">Satira, sarkasmus a ironie</a></h1>
 <p>Pokudněkoho baví používá sarkasmus a satiru, tak si můžete přečíst paper na <a href="./resources/fialova.pdf">fialovou</a> barvu.</p>
 <p>Popřípadě doporučuji <a href="https://paralelnilisty.cz/">paralelní listy</a>.</p>
+<p>Nebo oproti standardní <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedii</a> se můžete podívat na informace z <a href="https://necyklopedie.org/">Necyklopedie</a>.</p>
 
                     </main>
 
