--- a/mff.html
+++ b/mff.html
@@ -191,7 +191,7 @@
 <h2 id="odkazy-na-předměty"><a class="header" href="#odkazy-na-předměty">Odkazy na předměty</a></h2>
 <div class="table-wrapper"><table><thead><tr><th style="text-align: center">Předmět</th><th style="text-align: center">Odkazy</th></tr></thead><tbody>
 <tr><td style="text-align: center"><strong>2425 - Zimní semestr</strong></td><td style="text-align: center"><strong>--</strong></td></tr>
-<tr><td style="text-align: center">Constraint programming</td><td style="text-align: center"><a href="https://ktiml.mff.cuni.cz/~bartak/podminky/">Web</a> <a href="https://jbulin.github.io/teaching/fall/nopt042/">Cvičení</a></td></tr>
+<tr><td style="text-align: center">Constraint programming</td><td style="text-align: center"><a href="https://ktiml.mff.cuni.cz/~bartak/podminky/">Web</a> <a href="https://jbulin.github.io/teaching/fall/nopt042/">Cvičení</a> <a href="https://picat-lang.org/download/picat_guide.pdf">Picat Docs</a></td></tr>
 <tr><td style="text-align: center">Introduction to Parameterized Algorithms</td><td style="text-align: center"><a href="https://research.koutecky.name/db/teaching:intro_par_alg2324">Web</a> <a href="https://www.mimuw.edu.pl/~malcin/book/parameterized-algorithms.pdf">Kniha</a> <a href="https://iuuk.mff.cuni.cz/~tung/teaching/fpt-ws2324/">Cvičení</a></td></tr>
 <tr><td style="text-align: center">Programování v jazyce Rust</td><td style="text-align: center"><a href="https://d3s.mff.cuni.cz/teaching/nprg082/">Web</a></td></tr>
 <tr><td style="text-align: center">Vybrané kapitoly z kombinatoriky 1</td><td style="text-align: center"></td></tr>
