--- a/movies.html
+++ b/movies.html
@@ -249,7 +249,7 @@
 <tr><td style="text-align: center">The Naked Gun: From the Files of Police Squad!</td><td style="text-align: center"></td></tr>
 <tr><td style="text-align: center">The Naked Gun 2½: The Smell of Fear</td><td style="text-align: center"></td></tr>
 <tr><td style="text-align: center">Naked Gun 33⅓: The Final Insult</td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">Nacho Libre</td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">Nacho Libre</td><td style="text-align: center"><a href="https://www.imdb.com/title/tt0457510/">IMDB</a></td></tr>
 </tbody></table>
 </div>
 <h2 id="musicals"><a class="header" href="#musicals">Musicals</a></h2>
