deploy: 335d01fe5da1080eed85ec08dec2fed4a4f08f01

--- a/print.html
+++ b/print.html
@@ -611,8 +611,8 @@ Už jen vytiskni les.
 print_woods(boundaries[0], boundaries[1], boundaries[2], boundaries[3])
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="jednoduchý-průvodce-po-tenerife"><a class="header" href="#jednoduchý-průvodce-po-tenerife">Jednoduchý průvodce po Tenerife</a></h1>
-<p>Zde můžete najít pár typů a rad ohledně návštěvy Španělského ostrova Tenerife. Mimo samotné cesty můžete zde najít pár zajímavých míst a taky několik konkrétních tras.</p>
-<p>Vše berte trochu s ohledem. Ne všechny trasy jsou vhodné pro každého a také se v průběhu času mohou měnit konkrétní mistní podmínky a situace. Tento průvocde je občas aktualizován, ale je to pouze moje volnočasová aktivita.</p>
+<p>Zde můžete najít pár tipů a rad ohledně návštěvy Španělského ostrova Tenerife. Mimo samotné cesty můžete zde najít pár zajímavých míst a taky několik konkrétních tras.</p>
+<p>Vše berte trochu s ohledem. Ne všechny trasy jsou vhodné pro každého a také se v průběhu času mohou měnit konkrétní mistní podmínky a situace. Tento průvodce je občas aktualizován, ale je to pouze moje volnočasová aktivita.</p>
 <p>Všechny typy a rady jsou na Vaše vlastní nebezpečí a tímto nijak neodpovídám, že případné potíže.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="cesta"><a class="header" href="#cesta">Cesta</a></h1>
 <p>Zde si nejdříve představím doporučení na věci, které by šlo vzít s sebou a následně nějaké komentáře ohledně cesty letadlem.</p>
