--- a/tenerife.html
+++ b/tenerife.html
@@ -176,8 +176,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="jednoduchý-průvodce-po-tenerife"><a class="header" href="#jednoduchý-průvodce-po-tenerife">Jednoduchý průvodce po Tenerife</a></h1>
-<p>Zde můžete najít pár typů a rad ohledně návštěvy Španělského ostrova Tenerife. Mimo samotné cesty můžete zde najít pár zajímavých míst a taky několik konkrétních tras.</p>
-<p>Vše berte trochu s ohledem. Ne všechny trasy jsou vhodné pro každého a také se v průběhu času mohou měnit konkrétní mistní podmínky a situace. Tento průvocde je občas aktualizován, ale je to pouze moje volnočasová aktivita.</p>
+<p>Zde můžete najít pár tipů a rad ohledně návštěvy Španělského ostrova Tenerife. Mimo samotné cesty můžete zde najít pár zajímavých míst a taky několik konkrétních tras.</p>
+<p>Vše berte trochu s ohledem. Ne všechny trasy jsou vhodné pro každého a také se v průběhu času mohou měnit konkrétní mistní podmínky a situace. Tento průvodce je občas aktualizován, ale je to pouze moje volnočasová aktivita.</p>
 <p>Všechny typy a rady jsou na Vaše vlastní nebezpečí a tímto nijak neodpovídám, že případné potíže.</p>
 
                     </main>
