--- a/tba.html
+++ b/tba.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Welcome page - Personal page</title>
+        <title>TBA - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,40 +154,48 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="welcome-to-my-personal-page"><a class="header" href="#welcome-to-my-personal-page">Welcome, to my personal page.</a></h1>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
-</span>    let mut interests : Vec&lt;&amp;str&gt; = vec!["Computer science",
-                                         "Travel",
-                                         "Music",
-                                         "Movies"];
-
-    println!("Welcome to my personal webpage.");
-    println!("");
-    println!("Here you may find some things I enjoy or do.");
-
-    for int in &amp;interests {
-        println!("\t- {}", int);
-    }
-
-    interests.push("Advent of code");
-
-    println!("And also I cannot forget: {}", interests[interests.len() - 1]);
-
-    let url = "github.com/metury/metury.github.io";
-    let tools = vec!["Github pages", "MdBook"];
-
-    println!("");
-    println!("Source of this page can be found at the link: {}", url);
-    println!("");
-    println!("For the proper usecase I used {}.", tools.join(" and "));
-<span class="boring">}</span></code></pre></pre>
-
+                        <h1 id="tba"><a class="header" href="#tba">TBA</a></h1>
+<!-- Advent --> <!--
+<h1 id="-its-the-time-of-the-year-again-"><a class="header" href="#-its-the-time-of-the-year-again-">🎄🎄 Its the time of the year again. 🎄🎄</a></h1>
+<p>Shortcut to <a href="https://adventofcode.com">Advent of code page</a> and my <a href="/adventofcode.html">solution page</a>.</p>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: center">Day</th><th style="text-align: center">Part 1</th><th style="text-align: center">Part 2</th></tr></thead><tbody>
+<tr><td style="text-align: center">1</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">2</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">3</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">4</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">5</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">6</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">7</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">8</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">9</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">10</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">11</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">12</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">13</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">14</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">15</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">16</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">17</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">18</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">19</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">20</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">21</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">22</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">23</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">24</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">25</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+<tr><td style="text-align: center">--&gt;</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
+</tbody></table>
+</div>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next prefetch" href="tba.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="about.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -197,8 +205,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next prefetch" href="tba.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="about.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
