deploy: 507000c793d81afc684673dfd834bf6a0586097b

--- a/print.html
+++ b/print.html
@@ -956,6 +956,7 @@ alias rustinstall="curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | s
 <tr><td>Nanos</td><td>Timo Leibig</td><td>978-80-7585-527-5</td></tr>
 <tr><td>Práskač</td><td>Jan-Erik Fjell</td><td>978-80-7390-790-7</td></tr>
 <tr><td>Pokoj stínů</td><td>Jan-Erik Fjell</td><td>978-80-7585-175-8</td></tr>
+<tr><td>Mstitel</td><td>Jan-Erik Fjell</td><td>978-80-7642-773-0</td></tr>
 </tbody></table>
 </div><div style="break-before: page; page-break-before: always;"></div><h1 id="advent-of-code"><a class="header" href="#advent-of-code">Advent of code</a></h1>
 <p>They are my solutions to <a href="https://adventofcode.com/">advent of code</a> tasks. There are separated to each year and day. All of this can be found on <a href="https://github.com/metury/advent-of-code">GitHub</a>, also with the script that generates these pages.
