--- a/library.html
+++ b/library.html
@@ -160,6 +160,7 @@
 <tr><td>Nanos</td><td>Timo Leibig</td><td>978-80-7585-527-5</td></tr>
 <tr><td>Práskač</td><td>Jan-Erik Fjell</td><td>978-80-7390-790-7</td></tr>
 <tr><td>Pokoj stínů</td><td>Jan-Erik Fjell</td><td>978-80-7585-175-8</td></tr>
+<tr><td>Mstitel</td><td>Jan-Erik Fjell</td><td>978-80-7642-773-0</td></tr>
 </tbody></table>
 </div>
                     </main>
