--- a/print.html
+++ b/print.html
@@ -334,6 +334,11 @@
 <ul>
 <li><a href="https://en.cppreference.com">Cpp reference</a></li>
 </ul>
+<h2 id="elixir"><a class="header" href="#elixir">Elixir</a></h2>
+<ul>
+<li><a href="https://elixir-lang.org/">Webpage</a></li>
+<li><a href="https://hexdocs.pm/elixir">Docs</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="programming-exercises"><a class="header" href="#programming-exercises">Programming exercises</a></h1>
 <p>There are some more or less easy programming exercises that will get you into a programming. Yet I have not work out the exact style of these pages, now there is just a list of solutions to typical problems.</p>
 <h2 id="ceaser-cipher"><a class="header" href="#ceaser-cipher">Ceaser cipher</a></h2>
