--- a/programming.html
+++ b/programming.html
@@ -175,6 +175,11 @@
 <ul>
 <li><a href="https://en.cppreference.com">Cpp reference</a></li>
 </ul>
+<h2 id="elixir"><a class="header" href="#elixir">Elixir</a></h2>
+<ul>
+<li><a href="https://elixir-lang.org/">Webpage</a></li>
+<li><a href="https://hexdocs.pm/elixir">Docs</a></li>
+</ul>
 
                     </main>
 
